Bug 176197 - crash when adding qaction button to the toolbar
Summary: crash when adding qaction button to the toolbar
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Parley Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-27 00:23 UTC by Lydia Pintscher
Modified: 2009-01-06 22:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lydia Pintscher 2008-11-27 00:23:12 UTC
When adding a qaction button to the editor toolbar (like Summary) Parley crashes when applying the changes.
Comment 1 Daniel Laidig 2009-01-06 22:54:29 UTC
SVN commit 906800 by laidig:

use the new XMLGUI attribute deleted="true" to hide the toolbar

BUG:176197

 M  +1 -7      parleymainwindow.cpp  
 M  +3 -0      parleyui.rc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=906800