use the new XMLGUI attribute deleted="true" to hide the toolbar

BUG:176197

svn path=/trunk/KDE/kdeedu/parley/; revision=906800